# json-archetype

./: .gitignore  .travis.yml  README.md  json-archetype.cabal  run-tests.sh
src/: Combinators.hs  Main.hs
src/JSON/: Archetype.hs  Validator.hs
src/Text/: ExtraCombinators.hs  RegexAssociationList.hs
tests/archetypes/: any.archetype  assignments.archetype  example.archetype  generic.archetype  numbers.archetype  quantifiers.archetype  re.archetype  simple.archetype
tests/inputs/: assignments-1.json  assignments-2.json  example-1.json  generic-1.json  generic-2.json  generic-3.json  numbers-1.json  quantifiers.json  re-1.json  re-2.json  simple-1.json  simple-2.json
