name:                json-archetype
version:             1.0.0
synopsis:            A JSON tester tool
description:         Compares one or more JSON file with a JSON archetype description
homepage:            http://github.com/rodrigosetti/json-archetype
license:             MIT
license-file:        LICENSE
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
copyright:           2013 Rodrigo Setti
category:            Testing
build-type:          Simple
cabal-version:       >=1.8
ghc-options:         -O3

executable json-test
  main-is:             Main.hs
  build-depends:       base >=4.5 && <5,
                       containers ==0.5.*,
                       json ==0.7.*,
                       parsec ==3.1.*,
                       regex-posix ==0.95.*,
                       transformers ==0.3.*
  hs-source-dirs:      src

